--- a/src/Covid19KeralaApi.EntityFrameworkCore/Covid19KeralaApi.EntityFrameworkCore.csproj
+++ b/src/Covid19KeralaApi.EntityFrameworkCore/Covid19KeralaApi.EntityFrameworkCore.csproj
@@ -22,6 +22,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.11" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Covid19KeralaApi.Core\Covid19KeralaApi.Core.csproj" />
